Ingress/grafana-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - "/grafana"
