Ingress/DefaultIngress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: default-ingressroute
  namespace: default 
spec:
  entryPoints:
    - web 
  routes:    
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: frontend-service
          port: 8080
