Ingress/GrafanaIngress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-grafana-ingressroute
  namespace: prometheus-grafana 
spec:
  entryPoints:
    - web 
  routes:
    - match: PathPrefix(`/grafana`) 
      kind: Rule
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
