Ingress/IngressGrafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: prometheus-grafana
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
      middlewares:
        - name: grafana-strip-prefix
